fixes horizontal scrolling on mobile

--- a/muckrock/assets/scss/view/_view.scss
+++ b/muckrock/assets/scss/view/_view.scss
@@ -13,6 +13,7 @@ html, body {
     @include display(flex);
     @include flex-direction(column);
     min-height: 100vh;
+    overflow: hidden;
     margin-bottom: 0;
     background-color: $color-white;
 }
